[metadata]
name = attrmap
version = 0.0.4
author = Yiqun Chen
author_email = yiqunchen1999@gmail.com
description = A flexible lib allows you get rid of dict.
long_description = file: README.md, CHANGELOG.md, LICENSE.txt
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/yiqunchen1999/attrmap
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = False
packages = find:
install_requires =
    pyyaml #>= 5.4.1

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    tests*
    ckpts*
    logs*

# [metadata]
# desciption_file = README.md
# install_requires =
#     pyyaml >= 5.4.1