[metadata]
name = attrmap
version = 0.0.7
author = Yiqun Chen
author_email = yiqunchen1999@gmail.com
description = An open source tool with **read-only protection** to help users get rid of dictionary in Python.
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
license = Apache Software License
url = https://github.com/yiqunchen1999/attrmap
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = False
packages = find:
python_requires = >=3.6
install_requires =
    pyyaml

[options.extras_require]
pdf = ReportLab>=1.2
rest = docutils>=0.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    tests*
    ckpts*
    logs*
